--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
   "devDependencies": {
     "bower": "^1.7.2",
     "browser-sync": "^2.10.1",
+    "browserify": "^13.1.0",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-cheerio": "^0.6.2",
+    "gulp-concat": "^2.6.0",
     "gulp-jade": "^1.1.0",
     "gulp-plumber": "^1.0.1",
+    "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.1.1",
-    "gulp.spritesmith": "^6.0.0",
-    "uglify": "^0.1.5",
-    "gulp-autoprefixer": "^3.1.0",
     "gulp-svg-sprite": "^1.3.3",
     "gulp-svgmin": "1.2.2",
-    "gulp-cheerio": "^0.6.2",
-    "gulp-replace": "^0.5.4",
-    "gulp-concat": "^2.6.0"
+    "gulp-typescript": "^3.0.2",
+    "gulp.spritesmith": "^6.0.0",
+    "tsify": "^1.0.8",
+    "typescript": "^2.0.3",
+    "typings": "^1.4.0",
+    "uglify": "^0.1.5",
+    "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
     "jquery": "^3.1.0"
