--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "portfolio",
   "version": "2.0.0",
   "devDependencies": {
+    "babel-preset-es2015": "^6.18.0",
+    "babelify": "^7.3.0",
     "bower": "^1.7.2",
     "browser-sync": "^2.10.1",
     "browserify": "^13.1.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.2",
     "gulp-cheerio": "^0.6.2",
     "gulp-concat": "^2.6.0",
     "gulp-jade": "^1.1.0",
@@ -15,7 +18,6 @@
     "gulp-sass": "^2.1.1",
     "gulp-svg-sprite": "^1.3.3",
     "gulp-svgmin": "1.2.2",
-    "gulp-typescript": "^3.0.2",
     "gulp.spritesmith": "^6.0.0",
     "tsify": "^1.0.8",
     "typescript": "^2.0.3",
