--- a/package.json
+++ b/package.json
@@ -2,28 +2,28 @@
   "name": "portfolio",
   "version": "2.0.0",
   "devDependencies": {
-    "babel-preset-es2015": "^6.18.0",
-    "babelify": "^7.3.0",
-    "bower": "^1.7.2",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-runtime": "^6.22.0",
     "browser-sync": "^2.10.1",
-    "browserify": "^13.1.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
     "gulp-cheerio": "^0.6.2",
     "gulp-concat": "^2.6.0",
-    "gulp-jade": "^1.1.0",
+    "gulp-pug": "^3.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.1.1",
     "gulp-svg-sprite": "^1.3.3",
     "gulp-svgmin": "1.2.2",
     "gulp.spritesmith": "^6.0.0",
-    "tsify": "^1.0.8",
-    "typescript": "^2.0.3",
-    "typings": "^1.4.0",
-    "uglify": "^0.1.5",
-    "vinyl-source-stream": "^1.1.0"
+    "pug": "^2.0.0-beta9",
+    "transform-runtime": "0.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "webpack": "^2.2.1"
   },
   "dependencies": {
     "jquery": "^3.1.0"
